--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,5 +1,5 @@
-from scripts.yaml_io import read_yaml
-from scripts.extract_gb_info import get_locus
+from scripts.yaml_io import read_yaml, write_yaml
+from scripts.extract_gb_info import get_locus, get_identification_version, get_genes
 from scripts.import_user_data import Data
 
 from scripts.get_software_parameters import (
@@ -10,12 +10,12 @@ from scripts.get_software_parameters import (
 )
 
 
-workdir: "../results/"
+workdir: "results/"
 
 
-software_parameters = read_yaml("../user_metadata/parameters.yaml")
+software_parameters = read_yaml("../user/parameters.yaml")
 
-sample_data: Data = Data("../user_metadata/sample_data.csv")
+sample_data: Data = Data("../user/Flu_c100.csv")
 (
     paired_illumina,
     single_illumina,
@@ -25,26 +25,53 @@ sample_data: Data = Data("../user_metadata/sample_data.csv")
 
 concatenated_illumina = list({**paired_illumina, **single_illumina}.keys())
 
-user_metadata = read_yaml("../user_metadata/sample_data.yaml")
+user_metadata = read_yaml("../user/Flu_c100.yaml")
+
+
 PROJECT_NAME = user_metadata["project_name"]
 REFERENCE_FASTA = user_metadata["fasta_reference"]
 REFERENCE_GB = user_metadata["gb_reference"]
 REFERENCE_NAME = re.findall("(?<=references/)(.*?)(?=.fasta)", REFERENCE_FASTA)[0]
 SEGMENTS = get_locus(REFERENCE_GB)
-
+PRIMERS = user_metadata["primers"]
 ASSEMBLER = ["snippy", "iVar"]
 
-print(os.getcwd() + f"/../data/influenza_01_1.trimmed.fastq.gz")
+identification, version = get_identification_version(SEGMENTS, REFERENCE_GB)
+
+config_user = {
+    "samples": sample_info_dic,
+    "project": user_metadata["project_name"],
+    "locus": get_locus(REFERENCE_GB),
+    "proteins": get_genes(REFERENCE_GB),
+    "identification": identification,
+    "version": version,
+    "sample_type": sample_data.get_sample_type(),
+}
+
+COVERAGE = user_metadata["coverage"]
+PROJECT_NAME = config_user["project"]
+FOLDER_NAME = user_metadata["folder"]
+# REFERENCE_GFF = user_metadata["gff_reference"]
+write_yaml("../config/config.yaml", config_user)
 
 
 include: "rules/snippy.smk"
 include: "rules/iVar.smk"
 include: "rules/consensus.smk"
 include: "rules/gather_consensus.smk"
+include: "rules/trimmomatic.smk"
+include: "rules/getCoverage.smk"
+include: "rules/generate_reads.smk"
 
 
 rule all:
     input:
+        expand(
+            "../user/reads/{folder}/{sample}_{dir}.fastq.gz",
+            folder=FOLDER_NAME,
+            sample=concatenated_illumina,
+            dir=["1", "2"],
+        ),
         expand(
             "align_samples/{sample}/{illumina_genome_assembly_software}/{sample}_consensus.fasta",
             illumina_genome_assembly_software=ASSEMBLER,
@@ -60,4 +87,9 @@ rule all:
             project=PROJECT_NAME,
             assembler=["snippy", "iVar"],
         ),
+        expand(
+            "align_samples/{sample}/iVar/snps.tsv",
+            sample=paired_illumina.keys(),
+        ),
+        expand("{project}/coverage_translate.csv", project=PROJECT_NAME),
         expand("{project}/compare_consensus.csv", project=PROJECT_NAME),
