allow for samples with no primers

--- a/user/Flu_c010.yaml
+++ b/user/Flu_c010.yaml
@@ -1,6 +1,6 @@
 project_name: flu_10
 fasta_reference: ../user/references/A_H3N2_A_Victoria_361_2011.fasta
 gb_reference: ../user/references/A_H3N2_A_Victoria_361_2011.gbk
-primers: ../user/primers/mpox.bed
+primers: Null
 folder: 10_coverage_flu
 coverage: 10
