--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -33,7 +33,9 @@ REFERENCE_FASTA = user_metadata["fasta_reference"]
 REFERENCE_GB = user_metadata["gb_reference"]
 REFERENCE_NAME = re.findall("(?<=references/)(.*?)(?=.fasta)", REFERENCE_FASTA)[0]
 SEGMENTS = get_locus(REFERENCE_GB)
-PRIMERS = user_metadata["primers"]
+PRIMERS = (
+    user_metadata.get("primers") if user_metadata.get("primers") is not None else False
+)
 ASSEMBLER = ["snippy", "iVar"]
 
 identification, version = get_identification_version(SEGMENTS, REFERENCE_GB)
@@ -56,11 +58,30 @@ write_yaml("../config/config.yaml", config_user)
 
 
 include: "rules/snippy.smk"
-include: "rules/iVar.smk"
+
+
+if PRIMERS:
+
+    include: "rules/iVar.smk"
+
+
+else:
+
+    include: "rules/iVar_noPrimer.smk"
+
+
 include: "rules/consensus.smk"
+
+
 include: "rules/gather_consensus.smk"
+
+
 include: "rules/trimmomatic.smk"
+
+
 include: "rules/getCoverage.smk"
+
+
 include: "rules/generate_reads.smk"
 
 
