--- a/user/Flu_c010.yaml
+++ b/user/Flu_c010.yaml
@@ -1,6 +1,7 @@
-project_name: flu_10
+project_name: flu_10_alt
 fasta_reference: ../user/references/A_H3N2_A_Victoria_361_2011.fasta
 gb_reference: ../user/references/A_H3N2_A_Victoria_361_2011.gbk
 primers: Null
-folder: 10_coverage_flu
+folder: 10_coverage_flu_alt
 coverage: 10
+create_fastq_ref: ../user/alt_ref/FLU_REF_ALT.fasta
