--- a/user/MPOX_c010.yaml
+++ b/user/MPOX_c010.yaml
@@ -1,7 +1,8 @@
-project_name: mpx_10
+project_name: mpx_10_alt
 fasta_reference: ../user/references/monkeypox_MT903344_MPXV_UK_P2_wo_NN.fasta
 gb_reference: ../user/references/monkeypox_MT903344_MPXV_UK_P2_wo_NN.gb
 primers: ../user/primers/mpox.bed
-folder: 10_coverage_mpx
+folder: 10_coverage_mpx_alt
 coverage: 10
 gff_reference: ../user/references/monkeypox_MT903344_MPXV_UK_P2_wo_NN.gff3
+create_fastq_ref: ../user/alt_ref/MPX_REF_ALT.fasta
