--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -31,6 +31,7 @@ user_metadata = read_yaml("../user/Flu_c100.yaml")
 PROJECT_NAME = user_metadata["project_name"]
 REFERENCE_FASTA = user_metadata["fasta_reference"]
 REFERENCE_GB = user_metadata["gb_reference"]
+REFERENCE_TO_CREATE = user_metadata["create_fastq_ref"]
 REFERENCE_NAME = re.findall("(?<=references/)(.*?)(?=.fasta)", REFERENCE_FASTA)[0]
 SEGMENTS = get_locus(REFERENCE_GB)
 PRIMERS = (
