--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,144 +1,138 @@
-identification: ''
+identification: MN908947
 locus:
-- '1'
-- '2'
-- '3'
-- '4'
-- '5'
-- '6'
-- '7'
-- '8'
-project: flu_100_alt
+- SARS_CoV_2
+project: SARS_CoV_2_500snps
 proteins:
-- PB2
-- PB1
-- PA
-- HA
-- NP
-- locus_00006
-- NA
+- orf1ab
+- S
+- ORF3a
+- E
 - M
-- NS
+- ORF6
+- ORF7a
+- ORF8
+- N
+- ORF10
 sample_type: null
 samples:
-  sample_10_c100_Flu:
-    fastq1: sample_10_c100_Flu_1.fastq.gz
-    fastq2: sample_10_c100_Flu_2.fastq.gz
+  sample_10__500snps_SARS_CoV_2:
+    fastq1: sample_10__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_10__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_11_c100_Flu:
-    fastq1: sample_11_c100_Flu_1.fastq.gz
-    fastq2: sample_11_c100_Flu_2.fastq.gz
+  sample_11__500snps_SARS_CoV_2:
+    fastq1: sample_11__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_11__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_12_c100_Flu:
-    fastq1: sample_12_c100_Flu_1.fastq.gz
-    fastq2: sample_12_c100_Flu_2.fastq.gz
+  sample_12__500snps_SARS_CoV_2:
+    fastq1: sample_12__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_12__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_13_c100_Flu:
-    fastq1: sample_13_c100_Flu_1.fastq.gz
-    fastq2: sample_13_c100_Flu_2.fastq.gz
+  sample_13__500snps_SARS_CoV_2:
+    fastq1: sample_13__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_13__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_14_c100_Flu:
-    fastq1: sample_14_c100_Flu_1.fastq.gz
-    fastq2: sample_14_c100_Flu_2.fastq.gz
+  sample_14__500snps_SARS_CoV_2:
+    fastq1: sample_14__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_14__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_15_c100_Flu:
-    fastq1: sample_15_c100_Flu_1.fastq.gz
-    fastq2: sample_15_c100_Flu_2.fastq.gz
+  sample_15__500snps_SARS_CoV_2:
+    fastq1: sample_15__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_15__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_16_c100_Flu:
-    fastq1: sample_16_c100_Flu_1.fastq.gz
-    fastq2: sample_16_c100_Flu_2.fastq.gz
+  sample_16__500snps_SARS_CoV_2:
+    fastq1: sample_16__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_16__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_17_c100_Flu:
-    fastq1: sample_17_c100_Flu_1.fastq.gz
-    fastq2: sample_17_c100_Flu_2.fastq.gz
+  sample_17__500snps_SARS_CoV_2:
+    fastq1: sample_17__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_17__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_18_c100_Flu:
-    fastq1: sample_18_c100_Flu_1.fastq.gz
-    fastq2: sample_18_c100_Flu_2.fastq.gz
+  sample_18__500snps_SARS_CoV_2:
+    fastq1: sample_18__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_18__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_19_c100_Flu:
-    fastq1: sample_19_c100_Flu_1.fastq.gz
-    fastq2: sample_19_c100_Flu_2.fastq.gz
+  sample_19__500snps_SARS_CoV_2:
+    fastq1: sample_19__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_19__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_1_c100_Flu:
-    fastq1: sample_1_c100_Flu_1.fastq.gz
-    fastq2: sample_1_c100_Flu_2.fastq.gz
+  sample_1__500snps_SARS_CoV_2:
+    fastq1: sample_1__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_1__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_20_c100_Flu:
-    fastq1: sample_20_c100_Flu_1.fastq.gz
-    fastq2: sample_20_c100_Flu_2.fastq.gz
+  sample_20__500snps_SARS_CoV_2:
+    fastq1: sample_20__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_20__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_21_c100_Flu:
-    fastq1: sample_21_c100_Flu_1.fastq.gz
-    fastq2: sample_21_c100_Flu_2.fastq.gz
+  sample_21__500snps_SARS_CoV_2:
+    fastq1: sample_21__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_21__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_22_c100_Flu:
-    fastq1: sample_22_c100_Flu_1.fastq.gz
-    fastq2: sample_22_c100_Flu_2.fastq.gz
+  sample_22__500snps_SARS_CoV_2:
+    fastq1: sample_22__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_22__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_23_c100_Flu:
-    fastq1: sample_23_c100_Flu_1.fastq.gz
-    fastq2: sample_23_c100_Flu_2.fastq.gz
+  sample_23__500snps_SARS_CoV_2:
+    fastq1: sample_23__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_23__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_24_c100_Flu:
-    fastq1: sample_24_c100_Flu_1.fastq.gz
-    fastq2: sample_24_c100_Flu_2.fastq.gz
+  sample_24__500snps_SARS_CoV_2:
+    fastq1: sample_24__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_24__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_25_c100_Flu:
-    fastq1: sample_25_c100_Flu_1.fastq.gz
-    fastq2: sample_25_c100_Flu_2.fastq.gz
+  sample_25__500snps_SARS_CoV_2:
+    fastq1: sample_25__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_25__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_26_c100_Flu:
-    fastq1: sample_26_c100_Flu_1.fastq.gz
-    fastq2: sample_26_c100_Flu_2.fastq.gz
+  sample_26__500snps_SARS_CoV_2:
+    fastq1: sample_26__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_26__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_27_c100_Flu:
-    fastq1: sample_27_c100_Flu_1.fastq.gz
-    fastq2: sample_27_c100_Flu_2.fastq.gz
+  sample_27__500snps_SARS_CoV_2:
+    fastq1: sample_27__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_27__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_28_c100_Flu:
-    fastq1: sample_28_c100_Flu_1.fastq.gz
-    fastq2: sample_28_c100_Flu_2.fastq.gz
+  sample_28__500snps_SARS_CoV_2:
+    fastq1: sample_28__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_28__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_29_c100_Flu:
-    fastq1: sample_29_c100_Flu_1.fastq.gz
-    fastq2: sample_29_c100_Flu_2.fastq.gz
+  sample_29__500snps_SARS_CoV_2:
+    fastq1: sample_29__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_29__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_2_c100_Flu:
-    fastq1: sample_2_c100_Flu_1.fastq.gz
-    fastq2: sample_2_c100_Flu_2.fastq.gz
+  sample_2__500snps_SARS_CoV_2:
+    fastq1: sample_2__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_2__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_30_c100_Flu:
-    fastq1: sample_30_c100_Flu_1.fastq.gz
-    fastq2: sample_30_c100_Flu_2.fastq.gz
+  sample_30__500snps_SARS_CoV_2:
+    fastq1: sample_30__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_30__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_3_c100_Flu:
-    fastq1: sample_3_c100_Flu_1.fastq.gz
-    fastq2: sample_3_c100_Flu_2.fastq.gz
+  sample_3__500snps_SARS_CoV_2:
+    fastq1: sample_3__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_3__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_4_c100_Flu:
-    fastq1: sample_4_c100_Flu_1.fastq.gz
-    fastq2: sample_4_c100_Flu_2.fastq.gz
+  sample_4__500snps_SARS_CoV_2:
+    fastq1: sample_4__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_4__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_5_c100_Flu:
-    fastq1: sample_5_c100_Flu_1.fastq.gz
-    fastq2: sample_5_c100_Flu_2.fastq.gz
+  sample_5__500snps_SARS_CoV_2:
+    fastq1: sample_5__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_5__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_6_c100_Flu:
-    fastq1: sample_6_c100_Flu_1.fastq.gz
-    fastq2: sample_6_c100_Flu_2.fastq.gz
+  sample_6__500snps_SARS_CoV_2:
+    fastq1: sample_6__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_6__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_7_c100_Flu:
-    fastq1: sample_7_c100_Flu_1.fastq.gz
-    fastq2: sample_7_c100_Flu_2.fastq.gz
+  sample_7__500snps_SARS_CoV_2:
+    fastq1: sample_7__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_7__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_8_c100_Flu:
-    fastq1: sample_8_c100_Flu_1.fastq.gz
-    fastq2: sample_8_c100_Flu_2.fastq.gz
+  sample_8__500snps_SARS_CoV_2:
+    fastq1: sample_8__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_8__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-  sample_9_c100_Flu:
-    fastq1: sample_9_c100_Flu_1.fastq.gz
-    fastq2: sample_9_c100_Flu_2.fastq.gz
+  sample_9__500snps_SARS_CoV_2:
+    fastq1: sample_9__500snps_SARS_CoV_2_1.fastq.gz
+    fastq2: sample_9__500snps_SARS_CoV_2_2.fastq.gz
     tech: illumina
-version: ''
+version: '3'
