--- a/config/assembler.yaml
+++ b/config/assembler.yaml
@@ -2,5 +2,8 @@ channels:
   - bioconda
   - conda-forge
 dependencies:
-  - snakemake-minimal >=5.24.1
-  - python =3.10
+    - snakemake-minimal >=5.24.1
+    - python =3.10
+    - matplotlib
+    - scipy
+    - biopython
